# mediacutter

./: .gitattributes  .gitignore  README.md  THIRD_PARTY_NOTICES.md  build.ps1  pyproject.toml  requirements.txt
src/mediacutter/: __init__.py  cli.py
tests/: test_cli.py
